Fixed squished menu

--- a/src/Components/HamburgerMenu/HamburgerMenu.scss
+++ b/src/Components/HamburgerMenu/HamburgerMenu.scss
@@ -81,7 +81,7 @@
   }
 }
 
-@media screen and (min-height: 1080px) {
+@media screen and (min-width: 1080px) {
     .hamburger-menu-wrapper {
         width: 2.5%;
         height: 40%;
